##########################
# Setup.py Configuration #
##########################
[metadata]
name = pubmed2pdf
version = 0.0.2
description = A Python package to download PDFs from OA publications in PubMed
long_description = file: README.rst

# URLs associated with the project
url = https://github.com/ddomingof/PubMed2PDF
download_url = https://github.com/ddomingof/PubMed2PDF
project_urls =
    Bug Tracker = https://github.com/ddomingof/PubMed2PDF/issues
    Source Code = https://github.com/ddomingof/PubMed2PDF
    Documentation = https://github.com/ddomingof/PubMed2PDF

# Author information
author = Daniel Domingo-Fernández
author_email = ddomingof@gmail.com
maintainer = Daniel Domingo-Fernández
maintainer_email = ddomingof@gmail.com

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    click==7.0
    requests==2.22.0
    requests3
    beautifulsoup4==4.7.1
    lxml



# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pubmed2pdf = pubmed2pdf.cli:main
